# vcl.graphics.recorder

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindFFmpeg.cmake
examples/screenrecorder/: application.h  main.cpp
examples/screenrecorder/imgui/: imgui_impl_opengl3.cpp
src/vcl/graphics/recorder/: recorder.cpp  recorder.h
tests/: empty.cpp  sequence.cpp  white.cpp
